# ikaros

./: .gitattributes  .gitignore  .out  AGENTS.md  ARToolKitPlus-2.3.1.tar.bz2  CBFile.txt  CMakeLists.txt  IKAROS2_MODULES.md  IKAROS_CLI_CHEATSHEET.md  Ikaros.ipynb  PARAMETER_RULES.md  README.md  ReadMe.md  System.h  UNPORTED_IKAROS2_MODULES.md  file.txt  ik-pub.code-workspace  ikaros_windows.sln  ikaros_windows.vcxproj  ikaros_windows.vcxproj.filters  matix_todo.md  status.md  v1.aiff
Projects/: CMakeLists.txt  ReadMe.md
Projects/2011/: CMakeLists.txt
Projects/2011/LucsRoboticsArm/: README.md
Projects/2011/LucsRoboticsKit/: README.md
Projects/2016/: CMakeLists.txt
Projects/2016/NeuralBoard/: BackPropBoard.ikc  BackPropExample.txt  NeuralBoard.cc  NeuralBoard.ikc  OutputExample.txt
Projects/2016/RobotMimicry/: Train.ikg
Projects/2016/TouchBoard/: README.md  TouchBoard.cc  TouchBoard_test.ikg
Projects/2016/black_box_vision/: README.md
Projects/2017/: CMakeLists.txt
Projects/2017/MagicalGarden/: ReadMe.md
Projects/2017/RobotMimicry/: README.md
Projects/2018/: CMakeLists.txt
Projects/2018/Action/: ReadMe.md
Projects/2018/black_box_vision/: black_box_vision.cc
Projects/2019/: CMakeLists.txt
Projects/2019/PupilColorIntensity/: README.md
Projects/2021/: CMakeLists.txt
Projects/2021/EpiVisionSystem/: Detector.ikg  DynamixelSimulate.ikg  EpiServos.ikg  EpiTorso.ikg  EpiTorsoMinimal.ikg  ExperimentSetup.ikg
Projects/2021/Vattenhallen/: README.md
Projects/Epi/: Epi.ikg
Projects/HinderHelper2024/: HinderHelperFinal3Oct2024_B_CBA_Amandus.json
Projects/RobotMimicry/: Track2Heads.ikg  TrackHead.ikg  data.txt
Source/: CMakeLists.txt  IKAROS.h  IKAROS_Matrix.h  IKAROS_System.h  ikaros.h
Source/Documentation/: README.md  ikaros_3.md  parameters.md
Source/Kernel/: CMakeLists.txt  IKAROS.cc  IKAROS_ColorTables.h  IKAROS_Image_Processing.cc  IKAROS_Image_Processing.h  IKAROS_Malloc_Debug.h  IKAROS_Math.cc  IKAROS_Math.h  IKAROS_Matrix.h  IKAROS_Serial.h  IKAROS_Serial_BSD.cc  IKAROS_Serial_WIN.cc  IKAROS_Signal.cc  IKAROS_Socket.h  IKAROS_Socket_BSD.cc  IKAROS_Socket_WIN.cc  IKAROS_Threads.h  IKAROS_Threads_none.cc  IKAROS_Threads_pthread.cc  IKAROS_Timer.h  IKAROS_Timer_POSIX.cc  IKAROS_Timer_WIN.cc  IKAROS_Timer_none.h  IKAROS_Utils.cc  IKAROS_Utils.h  IKAROS_XML.cc  IKAROS_XML.h  WebUI.cc  WebUI.h  color_tables.h  compute_engine.cc  compute_engine.h  deprecated.cc  deprecated.h  dictionary.cc  dictionary.h  dictionary.md  exceptions.h  expression.h  h_matrix.h  (+36 more)
Source/Kernel/KernelTests/: hierarchy_example.ikg  kernel_test_1toMany.ikg  kernel_test_attribute_references.ikg  kernel_test_name_collisions.ikg  kernel_test_paths.ikg  kernel_test_sort_1.ikg  kernel_test_subgroup.ikg
Source/Modules/: CMakeLists.txt  Modules.h  ReadMe.md
Source/Modules/ANN/: CMakeLists.txt
Source/Modules/Audio/: CMakeLists.txt
Source/Modules/Balkenius1995/: BalkeniusReactiveControl.cc  BalkeniusReactiveControl.ikc  BalkeniusReactiveControl_World2D_test.ikg  CMakeLists.txt
Source/Modules/BrainModels/: CMakeLists.txt  CMakeLists.txt.bak
Source/Modules/CodingModules/: CMakeLists.txt
Source/Modules/ControlModules/: CMakeLists.txt
Source/Modules/CustomModules/: ToLineCombination.h  ToLineCombination.ikc
Source/Modules/EnvironmentModules/: CMakeLists.txt
Source/Modules/EpiSpeech/: CMakeLists.txt  EpiSpeech.cc  EpiSpeech.ikc  EpiSpeech___.h  EpiSpeech_test.ikg  ReadMe.md
Source/Modules/EpiVoice/: CMakeLists.txt  EpiVoice.cc  EpiVoice.ikc  EpiVoice_test.ikg  ReadMe.md
Source/Modules/Examples/: CMakeLists.txt
Source/Modules/IOModules/: CMakeLists.txt
Source/Modules/ImageProcessing/: CMakeLists.txt
Source/Modules/LearningModules/: CMakeLists.txt
Source/Modules/Module/: Module.ikc  ReadMe.md
Source/Modules/NoCodeClass/: NoCodeClass.ikc  ReadMe.md
Source/Modules/RobotModules/: CMakeLists.txt
Source/Modules/TestModules/: Test1_test.ikg  Test3_test.ikg  Test5.ikg
Source/Modules/UtilityModules/: CMakeLists.txt
Source/Modules/VisionModules/: CMakeLists.txt
Source/UserModules/: CMakeLists.txt  CMakeLists.txt.tat  CMakeLists.txt.trond  UserModules.h  mkmodule_lx.sh
Source/UserModules/BlobChooser/: BlobChooser.cc  BlobChooser.h  BlobChooser.ikc  CMakeLists.txt
Source/UserModules/BoundaryCheck/: BoundaryCheck.cc  BoundaryCheck.h  BoundaryCheck.ikc  CMakeLists.txt
Source/UserModules/CameraSimulate/: CMakeLists.txt  CameraSimulate.cc  CameraSimulate.h  CameraSimulate.ikc
Source/UserModules/ComposeTransform/: CMakeLists.txt  ComposeTransform.cc  ComposeTransform.h  ComposeTransform.ikc
Source/UserModules/DelayCounter/: CMakeLists.txt  DelayCounter.cc  DelayCounter.h  DelayCounter.ikc
Source/UserModules/Delta/: Delta.cc  Delta.h  Delta.ikc
Source/WebUI/: API.md  CMakeLists.txt  New Event.ics  WebUI.cc  WebUI.h  WebUIWidget.js  WebUIWidgetBarGraph.js  WebUIWidgetButton.js  WebUIWidgetCanvas.js  WebUIWidgetCanvas3D.js  WebUIWidgetControl.js  WebUIWidgetDropDownMenu.js  WebUIWidgetEpiHead.js  WebUIWidgetGraph.js  WebUIWidgetGrid.js  WebUIWidgetImage.js  WebUIWidgetKeyPoints.js  WebUIWidgetMarker.js  WebUIWidgetPath.js  WebUIWidgetPlot.js  WebUIWidgetRectangle.js  WebUIWidgetSliderHorizontal.js  WebUIWidgetSliderVertical.js  WebUIWidgetSwitch.js  WebUIWidgetTable.js  WebUIWidgetTestObject.js  WebUIWidgetText.js  auth.html  brainstudio.js  breadcrumbs.js  control.js  default.css  defaults.css  demo.css  dialog.js  error.glb  index.html  index.ipad.html  info.html  inspector.js  (+25 more)
Source/WebUI_2.0/: WebUIWidget.js  WebUIWidgetBarGraph.js  WebUIWidgetButton.js  WebUIWidgetCanvas.js  WebUIWidgetControl.js  WebUIWidgetGraph.js  WebUIWidgetImage.js  WebUIWidgetPath.js  WebUIWidgetPlot.js  WebUIWidgetPlot_.js  WebUIWidgetSlider.js  WebUIWidgetSliderHorizontal.js  WebUIWidgetSliderVertical.js  WebUIWidgetTable.js  WebUIWidgetTestObject.js  WebUIWidgetText.js  classic.css  grail.html  index.html  slider_test crazy.html  styling.css  stylish.css  viewer_1.html  viewer_10.html  viewer_4.html  viewer_6.html  viewer_7.html  viewer_9.html  webui.js
(+4627 files in other folders)
