set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_subdirectory(Abs)
add_subdirectory(Add)
add_subdirectory(ArrayToMatrix)
add_subdirectory(Arbiter)
add_subdirectory(ArgMax)
add_subdirectory(Average)
add_subdirectory(Constant)
add_subdirectory(Counter)
add_subdirectory(Delay)
#add_subdirectory(Differentiator)
add_subdirectory(Distance)
add_subdirectory(Divide)
add_subdirectory(FunctionGenerator)
add_subdirectory(Flip)
add_subdirectory(Gate)
add_subdirectory(Histogram)
add_subdirectory(Integrator)
add_subdirectory(LinearSplines)
add_subdirectory(MatrixMultiply)
add_subdirectory(Max)
add_subdirectory(Maxima)
add_subdirectory(Fuse)
add_subdirectory(Mean)
add_subdirectory(Min)
add_subdirectory(Multiply)
add_subdirectory(Noise)
add_subdirectory(Normalize)
add_subdirectory(OuterProduct)
add_subdirectory(Polynomial)
add_subdirectory(Product)
add_subdirectory(Randomizer)
add_subdirectory(RotationConverter)
add_subdirectory(Scale)
add_subdirectory(Select)
add_subdirectory(SelectMax)
add_subdirectory(Softmax)
add_subdirectory(Submatrix)
add_subdirectory(Subtract)
add_subdirectory(Sum)
add_subdirectory(Sweep)
add_subdirectory(Threshold)
add_subdirectory(Transform)
add_subdirectory(TruncateArray)


set(SOURCE ${SOURCE} PARENT_SCOPE)
set(MODULES_INCLUDS ${MODULES_INCLUDS} PARENT_SCOPE)
set(MODULES_LIBS ${MODULES_LIBS} PARENT_SCOPE)