set(CMAKE_INCLUDE_CURRENT_DIR ON)
add_subdirectory(Topology)
add_subdirectory(Stop)
add_subdirectory(TimedStop)
add_subdirectory(GrowthDecay)
add_subdirectory(Concat)
add_subdirectory(FFT)
add_subdirectory(RingBuffer)
add_subdirectory(OscInterface)
add_subdirectory(MidiFilter)
add_subdirectory(MidiInterface)
add_subdirectory(DataBuffer)
add_subdirectory(DecomposeTransform)
add_subdirectory(InitialValue)
add_subdirectory(EnergyMeter)
add_subdirectory(Burner)
add_subdirectory(Expression)
add_subdirectory(Tanh)
add_subdirectory(InputSelector)
add_subdirectory(FanOut)
add_subdirectory(FanIn)
add_subdirectory(ListIterator)
add_subdirectory(SetSubmatrix)
add_subdirectory(SumMatrix)
add_subdirectory(Ones)
add_subdirectory(MatrixRotation)
add_subdirectory(MatrixScale)
add_subdirectory(MatrixTranslation)
add_subdirectory(Map)
add_subdirectory(Abs)
add_subdirectory(Add)
add_subdirectory(ArrayToMatrix)
add_subdirectory(Arbiter)
add_subdirectory(ArgMax)
add_subdirectory(Average)
add_subdirectory(Constant)
add_subdirectory(Counter)
add_subdirectory(DataConverter)
add_subdirectory(Delay)
add_subdirectory(Sink)
#add_subdirectory(Differentiator)
add_subdirectory(Distance)
add_subdirectory(Divide)
add_subdirectory(EventTrigger)
add_subdirectory(FunctionGenerator)
add_subdirectory(Flip)
add_subdirectory(Gate)
add_subdirectory(Histogram)
add_subdirectory(Integrator)
add_subdirectory(LinearSplines)
add_subdirectory(Logger)
add_subdirectory(MatrixMultiply)
add_subdirectory(Max)
add_subdirectory(Maxima)
add_subdirectory(Fuse)
add_subdirectory(Mean)
add_subdirectory(Min)
add_subdirectory(Multiply)
add_subdirectory(Noise)
add_subdirectory(Normalize)
#add_subdirectory(Oscillator)
add_subdirectory(OuterProduct)
add_subdirectory(Polynomial)
add_subdirectory(Product)
add_subdirectory(Randomizer)
add_subdirectory(ReactionTimeStatistics)
add_subdirectory(RotationConverter)
add_subdirectory(Scale)
add_subdirectory(Select)
add_subdirectory(SelectMax)
add_subdirectory(SelectRow)
add_subdirectory(Softmax)
add_subdirectory(Submatrix)
add_subdirectory(Subtract)
add_subdirectory(Sum)
add_subdirectory(Sweep)
add_subdirectory(Test)
add_subdirectory(Text)
add_subdirectory(Threshold)
add_subdirectory(Transform)
add_subdirectory(TruncateArray)
add_subdirectory(OneHotVector)

add_subdirectory(And)
add_subdirectory(Or)
add_subdirectory(Xor)
add_subdirectory(FlipFlop)

set(SOURCE ${SOURCE} PARENT_SCOPE)
set(MODULES_INCLUDS ${MODULES_INCLUDS} PARENT_SCOPE)
set(MODULES_LIBS ${MODULES_LIBS} PARENT_SCOPE)

