set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_subdirectory(AttentionFocus)
add_subdirectory(AttentionWindow)
add_subdirectory(CIFaceDetector)
add_subdirectory(CircleDetector)
add_subdirectory(ColorClassifier)
add_subdirectory(ColorMatch)
add_subdirectory(ColorTransform)
add_subdirectory(DepthProcessing)
add_subdirectory(ImageConvolution)
add_subdirectory(IntegralImage)
add_subdirectory(ImageOperators)
add_subdirectory(MarkerTracker)
add_subdirectory(MPIFaceDetector)
add_subdirectory(SaliencePoints)
add_subdirectory(SaliencyMap)
add_subdirectory(Scaling)
add_subdirectory(SpatialClustering)
add_subdirectory(WhiteBalance)

set(SOURCE ${SOURCE} PARENT_SCOPE)
set(MODULES_INCLUDS ${MODULES_INCLUDS} PARENT_SCOPE)
set(MODULES_LIBS ${MODULES_LIBS} PARENT_SCOPE)